libaudioverse-sys/src/libaudioverse/libaudioverse.h


/**The public interface to Libaudioverse.*/

/*Forward-declares all Libaudioverse types.*/

typedef int LavError;

typedef int LavHandle;

//Like parameterless callback, but for callbacks that need to know about time.
typedef void (*LavTimeCallback)(LavHandle handle, double time, void* userdata);


/**Set or clear the output device.*/
Lav_PUBLIC_FUNCTION LavError Lav_serverSetOutputDevice(LavHandle serverHandle, const char* device, int channels, int mixahead);

Lav_PUBLIC_FUNCTION LavError Lav_serverClearOutputDevice(LavHandle serverHandle);


Lav_PUBLIC_FUNCTION LavError Lav_serverLock(LavHandle serverHandle);

Lav_PUBLIC_FUNCTION LavError Lav_serverUnlock(LavHandle serverHandle);


Lav_PUBLIC_FUNCTION LavError Lav_serverSetBlockCallback(LavHandle serverHandle, LavTimeCallback callback, void* userdata);

Lav_PUBLIC_FUNCTION LavError Lav_serverWriteFile(LavHandle serverHandle, const char* path, int channels, double duration, int mayApplyMixingMatrix);


Lav_PUBLIC_FUNCTION LavError Lav_serverSetThreads(LavHandle serverHandle, int threads);

Lav_PUBLIC_FUNCTION LavError Lav_serverGetThreads(LavHandle serverHandle, int* destination);


Lav_PUBLIC_FUNCTION LavError Lav_serverCallIn(LavHandle serverHandle, double when, int inAudioThread, LavTimeCallback cb, void* userdata);