libaudioverse-sys/pregenerated_bindings.rs

 
 pub fn Lav_serverSetOutputDevice ( serverHandle : LavHandle , device : * const :: std :: os :: raw :: c_char , channels : :: std :: os :: raw :: c_int , mixahead : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverClearOutputDevice ( serverHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverLock ( serverHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverUnlock ( serverHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverSetBlockCallback ( serverHandle : LavHandle , callback : LavTimeCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverWriteFile ( serverHandle : LavHandle , path : * const :: std :: os :: raw :: c_char , channels : :: std :: os :: raw :: c_int , duration : f64 , mayApplyMixingMatrix : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverSetThreads ( serverHandle : LavHandle , threads : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverGetThreads ( serverHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_serverCallIn ( serverHandle : LavHandle , when : f64 , inAudioThread : :: std :: os :: raw :: c_int , cb : LavTimeCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 
 /// Buffers.
/// Buffers are chunks of audio data from any source.  A variety of nodes to work with buffers exist. 
